@@ -3443,6 +3443,11 @@ session_settings
 		bool optimize_hashing_for_speed;
 
 		int file_checks_delay_per_block;
+
+		enum disk_cache_algo_t
+		{ lru, largest_contiguous };
+
+		disk_cache_algo_t disk_cache_algorithm;
 	};
 
 ``user_agent`` this is the client identification to the tracker.
@@ -3825,6 +3830,15 @@ to 0, but can be set to higher numbers to slow down the rate at which
 data is read from the disk while checking. This may be useful for
 background tasks that doesn't matter if they take a bit longer, as long
 as they leave disk I/O time for other processes.
+
+``disk_cache_algorithm`` tells the disk I/O thread which cache flush
+algorithm to use. The default (and original) algorithm is LRU. This
+flushes the entire piece, in the write cache, that was least recently
+written to. This is specified by the ``session_settings::lru`` enum
+value. ``session_settings::largest_contiguous`` will flush the largest
+sequences of contiguous blocks from the write cache, regarless of the
+piece's last use time.
+
 
 pe_settings
 ===========
