@@ -1,3 +1,5 @@
+	* added another cache flush algorithm to write the largest
+	  contiguous blocks instead of the least recently used
 	* introduced a mechanism to be lighter on the disk when checking torrents
 	* applied temporary memory storage optimization to when checking
 	  a torrent as well
